Issue Fixed: Question No. is overlapping With Question Text

--- a/WebContent/styles/testGenMain.css
+++ b/WebContent/styles/testGenMain.css
@@ -515,12 +515,47 @@ ol {
 .testContainer ol li .questionList {
 	padding-left: 15px;
 } */
+
+
+.twoDigitIndex .optionLabelView {
+	margin-left: 8px;
+}
+
+.twoDigitIndex  .qti-blockquote {
+	margin-left: 5px;
+}
+.twoDigitIndex .textBoxContainer {
+	margin-left: 5px;
+}
+
+
+.threedigitIndex .optionLabelView {
+	margin-left: 15px;
+}
+.threedigitIndex .qti-blockquote  {
+	margin-left: 13px;
+}
+.threedigitIndex .textBoxContainer {
+	margin-left: 11px;
+}
+
+
+.fourDigitIndex .optionLabelView {
+	margin-left: 20px;
+}
+.fourDigitIndex .qti-blockquote {
+	margin-left: 20px;
+}
+.fourDigitIndex .textBoxContainer {
+	margin-left: 20px;
+}
+
 .questionList:before {
 	counter-reset: none;
 	counter-increment: list;
 	content: counter(list) ") ";
 	position: absolute;
-	margin-left: -15px;
+	margin-left: -10px;
 }
 
 .blank {
